@@ -1,6 +1,6 @@
 Package: oce
-Version: 0.6-4
-Date: 2011-09-17
+Version: 0.6-5
+Date: 2011-09-18
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
